--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "module-benchmark",
   "version": "1.0.0",
   "dependencies": {
-    "rollup": "^2.35.1"
+    "rollup": "^2.35.1",
+    "wbn": "0.0.5"
   }
 }
