Add benchmark runner

--- a/package.json
+++ b/package.json
@@ -2,6 +2,9 @@
   "name": "module-benchmark",
   "version": "1.0.0",
   "dependencies": {
+    "command-line-args": "^5.1.1",
+    "local-web-server": "^4.2.1",
+    "puppeteer-core": "^8.0.0",
     "rollup": "^2.35.1",
     "wbn": "0.0.5"
   }
